# CodexLens

./: .gitignore  BUILD_WEEK_DEMO_SCRIPT.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml  release.yml
examples/expenseflow/: .gitignore  README.md  pyproject.toml
examples/expenseflow/scripts/: prepare_demo.py
examples/expenseflow/tests/: test_exploit_proof.py  test_hardened_reference.py  test_live_patch.py
examples/expenseflow/vulnerable/: __init__.py
examples/expenseflow/vulnerable/app/: __init__.py  hardened_reference.py  main.py
src/codexlens/: BUILD_WEEK_ROADMAP.md  __init__.py  __main__.py  application.py  cli.py  config.py  demo.py  models.py  reporting.py
src/codexlens/ai_analysis/: __init__.py  context.py  prompts.py  service.py
src/codexlens/auto_fix/: __init__.py  apply.py  models.py  prompts.py  service.py  validation.py  workflow.py
src/codexlens/static_analysis/: __init__.py  ast_rules.py  discovery.py  engine.py  secrets.py
tests/: test_ai_analysis.py  test_application.py  test_auto_fix.py  test_cli.py  test_config.py  test_demo.py  test_json_output.py  test_static_analysis.py
