[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codexlens"
version = "0.1.0"
description = "AI-powered security auditing for Python projects."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Shreyash Chaurasia" }]
dependencies = [
    "openai>=1.0.0,<3.0.0",
    "rich>=13.7.0,<15.0.0",
    "typer>=0.15.0,<1.0.0",
]

[project.scripts]
codexlens = "codexlens.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codexlens"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
