[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codexlens"
version = "0.2.1"
description = "AI-powered security auditing for Python projects."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Shreyash Chaurasia" }]
keywords = ["application-security", "cli", "openai", "python", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "openai>=1.0.0,<3.0.0",
    "rich>=13.7.0,<15.0.0",
    "typer>=0.15.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/ShreyashChaurasia/CodexLens"
Repository = "https://github.com/ShreyashChaurasia/CodexLens"
Issues = "https://github.com/ShreyashChaurasia/CodexLens/issues"
Changelog = "https://github.com/ShreyashChaurasia/CodexLens/blob/main/CHANGELOG.md"

[project.scripts]
codexlens = "codexlens.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codexlens"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
