[project]
name = "expenseflow-demo"
version = "0.1.0"
description = "Intentionally vulnerable, owned FastAPI fixture for the CodexLens demo."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.0,<10.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "security_regression: proves the disposable work copy rejects a cross-tenant approval after a patch",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
